--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,23 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile 'com.lapism:searchview:4.0'
+    compile 'blue.aodev:material-values:1.1.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.github.armcha:LuseenBottomNavigation:1.8.2'
+    compile 'com.adammcneilly:actioncardview:1.0.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
