--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.github.armcha:LuseenBottomNavigation:1.8.2'
     compile 'com.adammcneilly:actioncardview:1.0.1'
+    compile 'com.pixplicity.easyprefs:library:1.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
