--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,10 @@ dependencies {
     compile 'com.adammcneilly:actioncardview:1.0.1'
     compile 'com.pixplicity.easyprefs:library:1.9.0'
     compile 'com.andkulikov:transitionseverywhere:1.7.5'
-    compile 'com.mikepenz:iconics-core:2.8.2@aar'
-    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
-    compile 'cz.kinst.jakub:android-stateful-layout-base:2.0.5'
+    compile 'com.mikepenz:iconics-core:2.9.1@aar'
+    compile 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+    compile "com.mikepenz:iconics-views:2.9.2@aar"
+    compile 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
