--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        maven { url 'https://maven.google.com' }
         maven { url "https://dl.bintray.com/michelelacorte/maven/" }
         jcenter()
         mavenCentral()
