--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,14 @@ dependencies {
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     compile 'io.realm:android-adapters:2.1.0'
+    compile 'com.jonathanfinerty.once:once:1.2.2'
+    compile 'com.github.lguipeng:BubbleView:1.0.1'
+    compile 'uk.co.samuelwall:material-tap-target-prompt:1.12.1'
+    compile 'com.github.jrvansuita:MaterialAbout:0.1.7'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
