--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     repositories {
         maven { url 'https://maven.google.com' }
         maven { url "https://dl.bintray.com/michelelacorte/maven/" }
+        maven { url "https://jitpack.io" }
         jcenter()
         mavenCentral()
     }
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
