--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,11 @@
         </activity>
         <activity
             android:name=".ui.intro.IntroActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:label="@string/title_activity_preference"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
