--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,13 @@
             android:name=".ui.intro.IntroActivity"
             android:label="@string/app_name" />
         <activity
+            android:name=".ui.settings.about.AboutActivity"
+            android:label="@string/app_name" />
+        <activity
             android:name=".ui.settings.SettingsActivity"
             android:label="@string/title_activity_preference"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:noHistory="true"/>
     </application>
 
 </manifest>
