--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="me.calebjones.pubgtrackerforandroid">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,9 +9,10 @@
         android:name=".TrackerApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${appNameLabel}"
         android:supportsRtl="true"
-        android:theme="@style/SplashTheme">
+        android:theme="@style/SplashTheme"
+        tools:replace="label,android:allowBackup">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
@@ -31,6 +33,9 @@
             android:label="@string/title_activity_preference"
             android:theme="@style/AppTheme"
             android:noHistory="true"/>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="${crashlyticsApiKey}"
+            />
     </application>
-
 </manifest>
