--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,12 @@
         android:label="${appNameLabel}"
         android:supportsRtl="true"
         android:theme="@style/SplashTheme"
-        tools:replace="label,android:allowBackup">
+        tools:replace="android:label">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
+            <intent-filter
+                android:label="${appNameLabel}">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
