--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
-
         android:label="${appNameLabel}"
         android:supportsRtl="true"
-        android:theme="@style/SplashTheme"
         tools:replace="android:label">
         <activity
-            android:name=".ui.main.MainActivity"
-            android:label="@string/app_name">
+            android:theme="@style/SplashTheme"
+            android:name=".ui.SplashActivity"
+            android:label="${appNameLabel}">
             <intent-filter
                 android:label="${appNameLabel}">
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +25,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/AppTheme.Transparent"
+            android:name=".ui.main.MainActivity"
+            android:label="${appNameLabel}">
+        </activity>
+        <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.intro.IntroActivity"
             android:label="@string/app_name"/>
         <activity
+            android:theme="@style/AppTheme"
             android:name=".ui.settings.about.AboutActivity"
             android:label="@string/app_name" />
         <activity
