--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ buildscript {
     dependencies {
         classpath 'io.fabric.tools:gradle:1.24.0'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.4'
-        classpath 'org.moallemi.gradle.advanced-build-version:gradle-plugin:1.5.3'
         classpath 'com.github.hotchemi:gradle-proguard-plugin:0.1.0'
     }
 }
@@ -15,51 +14,23 @@ buildscript {
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
-apply plugin: 'org.moallemi.advanced-build-version'
 apply plugin: 'com.getkeepsafe.dexcount'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-advancedVersioning {
-    nameOptions {
-        versionMajor 0
-        versionMinor 0
-        versionPatch 1
-
-    }
-    codeOptions {
-        versionCodeType org.moallemi.gradle.internal.VersionCodeType.AUTO_INCREMENT_ONE_STEP
-        dependsOnTasks 'release'
-    }
-    outputOptions {
-    }
-}
-
-def appVersionName = advancedVersioning.versionName
-def appVersionCode = advancedVersioning.versionCode
-
-def renameAPK(variant, defaultConfig, buildType) {
-    variant.outputs.each { output ->
-        def formattedDate = new Date().format('yyyyMMdd')
-
-        def file = output.packageApplication.outputFile
-        def fileName = applicationName + "-" + buildType + "-" + defaultConfig.versionName + "." + defaultConfig.versionCode + "-" + formattedDate + "-" + 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim() + ".apk"
-        output.packageApplication.outputFile = new File(file.parent, fileName)
-    }
-}
-
 android {
+    flavorDimensions "release"
     compileSdkVersion 26
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "me.calebjones.pubgtrackerforandroid"
-        manifestPlaceholders = [crashlyticsApiKey: fabric_key]
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode appVersionCode
-        versionName appVersionName
+        versionCode 1
+        versionName "0.0.1"
+        manifestPlaceholders = [crashlyticsApiKey: fabric_key]
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -67,7 +38,6 @@ android {
             ext.alwaysUpdateBuildId = false
             ext.enableCrashlytics = false
             applicationIdSuffix '.debug'
-            applicationName = "Debug"
             manifestPlaceholders = [appNameLabel         : "Debug"]
             debuggable true
             versionNameSuffix "debug"
@@ -77,11 +47,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [appNameLabel         : "PUBG Tracker"]
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            applicationVariants.all { variant ->
-                if (variant.buildType.name == "release") {
-                    renameAPK(variant, defaultConfig, "release")
-                }
-            }
         }
     }
     configurations.all {
@@ -91,11 +56,13 @@ android {
         debugTesting {
             minSdkVersion 21
             multiDexEnabled false
+            dimension "release"
         }
         prod {
             // The actual minSdkVersion for the application.
             minSdkVersion 19
             multiDexEnabled false
+            dimension "release"
         }
     }
 }
@@ -109,45 +76,45 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
-    compile 'com.android.support:support-v4:26.0.2'
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.jakewharton.timber:timber:4.5.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.lapism:searchview:4.0'
-    compile 'blue.aodev:material-values:1.1.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
-    compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    compile 'com.adammcneilly:actioncardview:1.0.1'
-    compile 'com.pixplicity.easyprefs:library:1.9.0'
-    compile 'com.andkulikov:transitionseverywhere:1.7.5'
-    compile 'com.mikepenz:iconics-core:2.9.3@aar'
-    compile 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
-    compile 'com.mikepenz:iconics-views:2.9.3@aar'
-    compile 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
-    compile 'com.jonathanfinerty.once:once:1.2.2'
-    compile 'uk.co.samuelwall:material-tap-target-prompt:2.0.0'
-    compile 'com.github.jrvansuita:MaterialAbout:0.1.7'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.3'
-    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
-    compile 'com.codemybrainsout.onboarding:onboarder:1.0.4'
-    compile 'com.github.clans:fab:1.6.4'
-    compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    implementation 'com.android.support:support-v4:26.0.2'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:design:26.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.lapism:searchview:4.0'
+    implementation 'blue.aodev:material-values:1.1.1'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.1.0'
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation 'com.adammcneilly:actioncardview:1.0.1'
+    implementation 'com.pixplicity.easyprefs:library:1.9.0'
+    implementation 'com.andkulikov:transitionseverywhere:1.7.5'
+    implementation 'com.mikepenz:iconics-core:2.9.3@aar'
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+    implementation 'com.mikepenz:iconics-views:2.9.3@aar'
+    implementation 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    implementation 'com.jonathanfinerty.once:once:1.2.2'
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.0'
+    implementation 'com.github.jrvansuita:MaterialAbout:0.1.7'
+    implementation 'com.afollestad.material-dialogs:core:0.9.4.3'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+    implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.airbnb.android:lottie:2.2.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-        transitive = true;
+    implementation 'com.airbnb.android:lottie:2.2.1'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true
     }
 }
 
