--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:replace="android:label">
         <activity
             android:name=".ui.main.MainActivity"
-            android:label="@string/app_name">
+            android:label="${appNameLabel}">
             <intent-filter
                 android:label="${appNameLabel}">
                 <action android:name="android.intent.action.MAIN" />
