--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,14 +68,14 @@ android {
             ext.enableCrashlytics = false
             applicationIdSuffix '.debug'
             applicationName = "Debug"
-            manifestPlaceholders = [appNameLabel         : "PUBG - Debug"]
+            manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
             versionNameSuffix "debug"
         }
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            manifestPlaceholders = [appNameLabel         : "PUBG Tracker"]
+            manifestPlaceholders = [appNameLabel: "PUBG Tracker"]
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             applicationVariants.all { variant ->
                 if (variant.buildType.name == "release") {
@@ -148,5 +148,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
 }
 
