--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,42 +9,52 @@
         android:name=".TrackerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="${appNameLabel}"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:replace="android:label">
         <activity
-            android:theme="@style/SplashTheme"
-            android:name=".ui.SplashActivity"
-            android:label="${appNameLabel}">
-            <intent-filter
-                android:label="${appNameLabel}">
+            android:name=".ui.splash.SplashActivity"
+            android:label="${appNameLabel}"
+            android:theme="@style/SplashTheme">
+            <intent-filter android:label="${appNameLabel}">
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme.Transparent"
             android:name=".ui.main.MainActivity"
-            android:label="${appNameLabel}">
-        </activity>
+            android:label="${appNameLabel}"
+            android:theme="@style/AppTheme.Transparent"></activity>
         <activity
-            android:theme="@style/AppTheme"
             android:name=".ui.intro.IntroActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
         <activity
-            android:theme="@style/AppTheme"
             android:name=".ui.settings.about.AboutActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:label="@string/title_activity_preference"
-            android:theme="@style/AppTheme"
-            android:noHistory="true"/>
+            android:noHistory="true"
+            android:theme="@style/AppTheme" />
+
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="${crashlyticsApiKey}"
-            />
+            android:value="${crashlyticsApiKey}" />
+
+        <activity
+            android:name=".ui.map.MapActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_map"
+            android:parentActivityName=".ui.main.MainActivity"
+            android:theme="@style/FullscreenTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="me.calebjones.pubgtrackerforandroid.ui.main.MainActivity" />
+        </activity>
     </application>
+
 </manifest>
