--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 
     dependencies {
         classpath 'io.fabric.tools:gradle:1.24.0'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.4'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
         classpath 'com.github.hotchemi:gradle-proguard-plugin:0.1.0'
     }
 }
@@ -15,40 +15,45 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
 apply plugin: 'com.getkeepsafe.dexcount'
+apply plugin: 'com.github.alexfu.androidautoversion'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
+
+androidAutoVersion {
+    release {
+        releaseTask = "assembleRelease"
+    }
+}
+
 android {
     flavorDimensions "release"
     compileSdkVersion 26
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.1"
     defaultConfig {
         applicationId "me.calebjones.pubgtrackerforandroid"
+        multiDexEnabled false
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode 1
-        versionName "0.0.1"
         manifestPlaceholders = [crashlyticsApiKey: fabric_key]
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         debug {
             ext.alwaysUpdateBuildId = false
             ext.enableCrashlytics = false
             applicationIdSuffix '.debug'
-
             applicationName = "Debug"
             manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
             versionNameSuffix "debug"
+
         }
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [appNameLabel: "PUBG Tracker"]
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     configurations.all {
@@ -57,31 +62,27 @@ android {
     productFlavors {
         debugTesting {
             minSdkVersion 21
-            multiDexEnabled false
             dimension "release"
+
         }
         prod {
             // The actual minSdkVersion for the application.
             minSdkVersion 19
-            multiDexEnabled false
             dimension "release"
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // If you want to use the GPU Filters
-    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
+    implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
-    implementation 'com.android.support:support-v4:26.0.2'
-    implementation 'com.android.support:appcompat-v7:26.0.2'
-    implementation 'com.android.support:design:26.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.0.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.1'
@@ -90,10 +91,8 @@ dependencies {
     implementation 'com.lapism:searchview:4.0'
     implementation 'blue.aodev:material-values:1.1.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.1.0'
     implementation 'com.aurelhubert:ahbottomnavigation:2.1.0'
-    implementation 'com.adammcneilly:actioncardview:1.0.1'
     implementation 'com.pixplicity.easyprefs:library:1.9.0'
     implementation 'com.andkulikov:transitionseverywhere:1.7.5'
     implementation 'com.mikepenz:iconics-core:2.9.3@aar'
@@ -101,20 +100,20 @@ dependencies {
     implementation 'com.mikepenz:iconics-views:2.9.3@aar'
     implementation 'cz.kinst.jakub:android-stateful-layout-simple:2.0.5'
     implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    implementation 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     implementation 'com.jonathanfinerty.once:once:1.2.2'
-    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.0'
-    implementation 'com.github.jrvansuita:MaterialAbout:0.1.7'
-    implementation 'com.afollestad.material-dialogs:core:0.9.4.3'
+    implementation 'uk.co.samuelwall:material-tap-target-prompt:2.0.1'
+    implementation 'com.github.jrvansuita:MaterialAbout:0.1.8'
+    implementation ('com.afollestad.material-dialogs:core:0.9.4.7'){
+        exclude module: 'support-v13'
+    }
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
     implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.airbnb.android:lottie:2.2.1'
     implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true
     }
