--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ buildscript {
         maven { url "https://jitpack.io" }
         jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
         classpath "io.realm:realm-gradle-plugin:3.5.0"
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.github.alexfu:androidautoversion:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
