--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:label="${appNameLabel}"
-            android:theme="@style/AppTheme.Transparent"></activity>
+            android:theme="@style/AppTheme.Transparent"/>
         <activity
             android:name=".ui.intro.IntroActivity"
             android:label="@string/app_name"
