--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ androidAutoVersion {
 android {
     flavorDimensions "release"
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "me.calebjones.pubgtrackerforandroid"
         multiDexEnabled false
