--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,17 +28,46 @@ androidAutoVersion {
     }
 }
 
+def versionMajor = 0
+def versionMinor = 1
+def versionPatch = 0
+
+def getGitHash = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--short', 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
 android {
     flavorDimensions "release"
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
-    defaultConfig {
-        applicationId "me.calebjones.pubgtrackerforandroid"
-        multiDexEnabled false
-        minSdkVersion 19
-        targetSdkVersion 26
-        manifestPlaceholders = [crashlyticsApiKey: fabric_key]
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    def versionPropsFile = file('version.properties')
+    if (versionPropsFile.canRead()) {
+        def Properties versionProps = new Properties()
+
+        versionProps.load(new FileInputStream(versionPropsFile))
+
+        def versionBuild = versionProps['VERSION_CODE'].toInteger() + 1
+
+        versionProps['VERSION_CODE']=versionBuild.toString()
+        versionProps.store(versionPropsFile.newWriter(), null)
+
+        defaultConfig {
+            applicationId "me.calebjones.pubgtracker"
+            multiDexEnabled false
+            minSdkVersion 19
+            targetSdkVersion 26
+            versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+            versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+            buildConfigField "String", "GitHash", "\"${getGitHash()}\""
+            manifestPlaceholders = [crashlyticsApiKey: fabric_key]
+            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        }
+    } else {
+        throw new GradleException("Could not read version.properties!")
     }
 
     buildTypes {
@@ -49,15 +78,21 @@ android {
             applicationName = "Debug"
             manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
-            versionNameSuffix "debug"
+            versionNameSuffix ".debug"
 
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             applicationName = "PUBG Tracker"
+            proguardFile 'proguard-project-app.pro'
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
             manifestPlaceholders = [appNameLabel: "PUBG Tracker"]
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            android.applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "PUBG-Tracker-release-${variant.versionName}.${variant.versionCode}-${getGitHash()}.apk"
+                }
+            }
         }
     }
     configurations.all {
@@ -86,7 +121,11 @@ dependencies {
     implementation('com.mikepenz:materialdrawer:5.9.5@aar') {
         transitive = true
     }
-    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.1'
