--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,12 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 // Initialize a new Properties() object called keystoreProperties.
 def keystoreProperties = new Properties()
 
+if (keystorePropertiesFile.canRead()) {
 // Load your keystore.properties file into the keystoreProperties object.
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+} else {
+    throw new GradleException("Could not read keystore.properties!")
+}
 
 android {
     signingConfigs {
