--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,9 @@ android {
             manifestPlaceholders = [appNameLabel: "PUBG - Debug"]
             debuggable true
             versionNameSuffix "-debug-${defaultConfig.versionCode}"
+            minifyEnabled true
+            proguardFile 'proguard-project-app.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
             minifyEnabled true
@@ -134,6 +137,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    // TESTING
+    implementation "com.github.jasminb:jsonapi-converter:0.8.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.0"
 
     // Android Official Libraries
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
