--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "io.realm:realm-gradle-plugin:4.2.0"
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.alexfu:androidautoversion:1.0.0'
         classpath 'org.moallemi.gradle.advanced-build-version:gradle-plugin:1.6.0'
@@ -20,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         maven { url "https://jitpack.io" }
         maven {
             url "https://maven.google.com"
