--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:value="26.1.0"
         tools:replace="android:value,android:label">
         <activity
-            android:name="me.calebjones.pubgtracker.ui.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:label="${appNameLabel}"
             android:theme="@style/SplashTheme">
             <intent-filter android:label="${appNameLabel}">
@@ -25,11 +25,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="me.calebjones.pubgtracker.ui.main.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="${appNameLabel}"
             android:theme="@style/AppTheme.Transparent"/>
         <activity
-            android:name="me.calebjones.pubgtracker.ui.intro.IntroActivity"
+            android:name=".ui.intro.IntroActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity
@@ -50,11 +50,11 @@
             android:name="me.calebjones.pubgtracker.ui.map.MapActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_map"
-            android:parentActivityName="me.calebjones.pubgtracker.ui.main.MainActivity"
+            android:parentActivityName=".ui.main.MainActivity"
             android:theme="@style/FullscreenTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="me.calebjones.pubgtracker.ui.main.MainActivity" />
+                android:value=".ui.main.MainActivity" />
         </activity>
     </application>
 
